Fix Free Shipping Label on Mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4317,6 +4317,14 @@ textarea {
 	
 	width:100%;
 }
+
+  .v2-home-freeshipping {
+    margin-top: -205px;
+    position: relative;
+    margin-bottom: 185px;
+    margin-left: 77px;
+  }
+
 	.Mobile-More-Listing {
 		margin-right: 10px;
     width: 198px;
